--- a/frontend/src/app/newaccount/newaccount.component.css
+++ b/frontend/src/app/newaccount/newaccount.component.css
@@ -9,6 +9,7 @@ body {
     text-align: center;
     margin-top: 1.5em;
     margin-bottom: 1em;
+    font-family: Kollektif;
 }
 
 .card-text {
